Fix Nginx Resolver

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -9,7 +9,8 @@ http {
     proxy_send_timeout          900s;
     proxy_read_timeout          900s;
     send_timeout                900s;
-    resolver 10.0.0.2 valid=30s;
+
+    include resolvers.conf;
 
     map $status $status_text {
         400 'Bad Request';
